--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,1 +1,12 @@
+$font_family:"Montserrat", sans-serif;
+$background_landing: #E9EB9E;
+$title_color: #799496;
+$text_color: #14080E;
+$background_foot-head:#FCAA67;
+$icons_color:#ACC196;
+
+
+
+
+
 
