--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -1,3 +1,18 @@
-<main>
- 
+<main class="page_landing">
+ <img class="logo_landing" src="/images/Transparencias/logo_letras_black.png" alt="logo_letras_black">
+ <h1 class="title_landing">PERSONALIZA TUS <br> EVENTOS</h1>
+ <h3 class="subt_landing">CREA TUS PROPIOS TICKETS DE <br> FORMA SENCILLA Y RÁPIDA</h3>
+ <section class="rectangle">
+    <a href="./tickets.html">
+        <img class="icon_landing" src="/images/pencil-square.svg" alt="crea">
+    </a>
+    <a href="">
+        <img class="icon_landing" src="/images/keyboard-fill.svg" alt="rellena">
+    </a>
+    <a href="">
+        <img class="icon_landing" src="/images/share-fill.svg" alt="share">
+    </a>
+ </section>
+ <button class="button_landing">Crear tickets </button>
 </main>
+<load src="/partials/footer.html"/>
