--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,5 @@
 $font_family:"Montserrat", sans-serif;
-$background_landing: #E9EB9E;
+$background_landing: #F2F2C9;
 $title_color: #799496;
 $text_color: #14080E;
 $background_foot-head:#FCAA67;
