creating html and css structure of header and footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,4 @@
-<footer>
-
+<footer class="footer">
+    <p class="footer__copy">EventiGo Company &copy;2024</p>
+    <img src="/images/Transparencias/logo_only.png" alt="logo_only" class="footer__logo">
 </footer>
