--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,3 @@
-<header>
-
+<header class="header">
+    <img src="/images/Transparencias/logo_white_H_small.png" alt="logo" class="header__logo">
 </header>
