--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,1 +1,9 @@
-
+.header {
+    background-color: $background_foot-head;
+    &__logo {
+        width: 200px;
+        @media(min-width: 768px) {
+            width: 250px;
+        }
+    }
+}
