--- a/src/scss/layout/_main_landing.scss
+++ b/src/scss/layout/_main_landing.scss
@@ -1,5 +1,5 @@
 .page_landing{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -7,11 +7,11 @@
     align-items: center;
     background-color:$background_landing;
     font-family: $font_family;
+       
 }
 .logo_landing{
     height: 350px;
-    
-    
+       
 }
 .title_landing{
     font-size: 35px;
@@ -36,24 +36,30 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
-    border: 3px solid $background_foot-head;
+    border: 2px solid $background_foot-head;
+    border-radius: 3px;
     margin-top: 30px;
-   
+     
 }
 .icon_landing{
     height: 50px;
     padding: 5px;
+    @include button_animation();
+    border-radius: 2px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 .button_landing{
     @include button_animation();
-    font-size: 30px;
+    font-size: 28px;
     color: white;
     background-color: $title_color;
     border-style: none;
-    height: 80px;
-    width: 300px;
+    height: 70px;
+    width: 250px;
+    box-sizing: border-box;
     border-radius: 15px;
     margin-top: 50px;
-    margin-bottom: 200px;
+    margin-bottom: 80px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
        
 }
