button_landing_hover

--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -13,6 +13,6 @@
         <img class="icon_landing" src="/images/share-fill.svg" alt="share">
     </a>
  </section>
- <button class="button_landing">Crear tickets </button>
+ <button class="button_landing">Crear Entradas </button>
 </main>
 
