--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -1,16 +1,16 @@
 <main class="page_landing">
  <img class="logo_landing" src="/images/Transparencias/logo_letras_black.png" alt="logo_letras_black">
  <h1 class="title_landing">PERSONALIZA TUS <br> EVENTOS</h1>
- <h3 class="subt_landing">CREA TUS PROPIOS TICKETS DE <br> FORMA SENCILLA Y RÁPIDA</h3>
+ <h3 class="subt_landing">CREA TUS PROPIAS ENTRADAS DE <br> FORMA SENCILLA Y RÁPIDA</h3>
  <section class="rectangle">
     <a href="./tickets.html">
-        <img class="icon_landing" src="/images/pencil-square.svg" alt="crea">
+        <i class="fa-solid fa-pen-to-square icon_landing"></i>
     </a>
     <a href="">
-        <img class="icon_landing" src="/images/keyboard-fill.svg" alt="rellena">
+        <i class="fa-solid fa-keyboard icon_landing"></i>
     </a>
     <a href="./final_design.html">
-        <img class="icon_landing" src="/images/share-fill.svg" alt="share">
+        <i class="fa-solid fa-share-nodes icon_landing"></i>
     </a>
  </section>
  <button class="button_landing">Crear Entradas </button>
