share section with twitter button

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,9 +1,10 @@
 $font_family:"Montserrat", sans-serif;
 $background_landing: #F2F2C9;
 $title_color: #799496;
-$text_color: #14080E;
+$text_color: rgb(20, 8, 14);
 $background_foot-head:#FCAA67;
 $icons_color:#ACC196;
+$url_color: #4D0429
 
 
 
