--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -62,10 +62,21 @@
     </section>
 
     <section class="form__share">
-        <i class="fa-solid fa-share"></i>
-        <h2>COMPARTE</h2>
+        <div class="form__share--title">
+            <i class="fa-solid fa-share"></i>
+            <h2>COMPARTE</h2>
+        </div>
 
-        <button>Crear entrada</button>
+        <a href="#" class="form__share--button">
+            <i class="fa-solid fa-ticket"></i>
+            CREAR ENTRADA</a>
+
+        <div class="form__share--link">
+            <h5>La entrada ha sido creada:</h5>
+            <p>url de la entrada que no se muy bien como se hace.</p>
+            <a href="#">Compartir en Twitter</a>
+
+        </div>
 
 
     </section>
