--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -5,7 +5,13 @@
     color: $title_color;
     font-family: $font_family;
     width: 100vw;
-    padding: 10px 0 10px 10px;
+    padding: 10px 0 15px 10px;
+    border-bottom: 1px solid $title_color;
+
+    @media (min-width: 768px) {
+        width: 50vw;            
+    }
+
     
     & h2 {
         font-weight: bold;
@@ -22,7 +28,7 @@
 
 .form__design--options{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr; 
     margin-top: 10px;
     & legend {
@@ -32,7 +38,7 @@
 }
 
 .options {
-    grid-column: 2/3;
+    grid-column: 3/4;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -50,40 +56,85 @@
 
 
 
-
 /*SHARE*/
 
 .form__share {
     background-color: $background_landing;
     color: $title_color;
     width: 100vw;
-    height: 10rem;
     font-family: $font_family;
-    padding: 10px 0 10px 10px;
     display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    padding: 10px 0 10px 5px;
+    border-bottom: 1px solid $title_color;
 
+        @media (min-width: 768px) {
+            width: 50vw;            
+        }
 
-    & h2 {
-        font-weight: bold;
-        font-size: 1.7rem;
-        display: inline-block;
+    &--title {
+
+        & h2 {
+            font-weight: bold;
+            font-size: 1.7rem;
+            display: inline-block;
+        }
+    
+        & i {display: inline-block;
+            font-size: 15px;
+            padding: 5px;
+            color: $icons_color;
+            margin-bottom: 5px;
+        }    
     }
-
-    & i {display: inline-block;
-        font-size: 15px;
-        padding: 5px;
-        color: $icons_color;
-    }
-
-    & button {
+    
+    &--button {
         all: unset;
         background-color: $icons_color;
         color: $text_color;
+        font-size: 1.1rem;
         font-weight: 500;
-        margin-top: 20px;
+        margin-top: 30px;
         padding: 10px;
         border-radius: 5px;
         align-self: center;
+        box-shadow: 2px 2px 4px 1px rgba(20, 8, 14, 0.5);
+        & i {
+            padding: 5px;
+        }
     }
     
+    &--link {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        text-align: center;
+        gap: 5px;
+        margin-top: 30px;
+       & h5 {
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: $background_foot-head;
+       }
+       & p {
+        color: $url_color;
+        font-size: 1.1rem;
+       }
+       & a {
+        align-self: center;
+        background-color: #00A0F5;
+        color: white;
+        font-size: 1.2rem;
+        padding: 15px;
+        text-decoration: none;
+        border-radius: 5px;
+        margin: 10px;
+       }
+    }
+}
+
+
+.hidden {
+    display: none;
 }
