--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -7,3 +7,13 @@
          
     }
 }
+
+@mixin form_animation(){   
+    font-size: 2rem;
+    transition: all 0.5s ease-out;
+    &:active{
+        transform: scale(0.9);
+        background-color: $background_foot-head;
+         
+    }
+}
