--- a/src/scss/layout/_main_landing.scss
+++ b/src/scss/layout/_main_landing.scss
@@ -6,20 +6,28 @@
     background-color:$background_landing;
     font-family: $font_family;
     padding: 30px;
+    height: 80%;
+    @media (min-width: 768px){
+        height: 100vh;
+        width: 100%;
+    }
+    @media (min-width: 1024px){
+        height: 90%;
+      
+    }
        
 }
 .logo_landing{
     height: 350px;
-    
-    
+       
 }
 .title_landing{
     font-size: 35px;
     font-weight: bold;
     text-align: center;
     color: $title_color;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 25px;
 
 }
 .subt_landing{
@@ -36,16 +44,16 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
-    border: 2px solid $background_foot-head;
+    border: 2px solid $icons_color;
     border-radius: 3px;
-    margin-top: 30px;
+    margin-top: 25px;
      
 }
 .icon_landing{
     size: 50px;
     padding: 5px;
     @include button_animation();
-    color: $background_foot-head;
+    color: $icons_color;
 }
 .button_landing{
     @include button_animation();
@@ -57,7 +65,10 @@
     width: 200px;
     border-radius: 15px;
     margin-top: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    @media (min-width: 1024px){
+        margin-bottom: 150px;
+    }
        
 }
