--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -3,13 +3,13 @@
  <h1 class="title_landing">PERSONALIZA TUS <br> EVENTOS</h1>
  <h3 class="subt_landing">CREA TUS PROPIAS ENTRADAS DE <br> FORMA SENCILLA Y RÁPIDA</h3>
  <section class="rectangle">
-    <a href="./tickets.html">
+    <a href="./tickets.html" target="_blank">
         <i class="fa-solid fa-pen-to-square icon_landing"></i>
     </a>
-    <a href="">
+    <a href="" target="_blank">
         <i class="fa-solid fa-keyboard icon_landing"></i>
     </a>
-    <a href="./final_design.html">
+    <a href="./final_design.html" target="_blank">
         <i class="fa-solid fa-share-nodes icon_landing"></i>
     </a>
  </section>
