add images background and add links to landing

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -85,7 +85,7 @@
             <h2>COMPARTE</h2>
         </div>
 
-        <a href="#" class="form__share--button">
+        <a href="./final_design.html" class="form__share--button" target="_blank">
             <i class="fa-solid fa-ticket"></i>
             CREAR ENTRADA</a>
 
