--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -6,13 +6,15 @@
     <a href="./tickets.html">
         <i class="fa-solid fa-pen-to-square icon_landing"></i>
     </a>
-    <a href="">
+    <a href="./tickets.html">
         <i class="fa-solid fa-keyboard icon_landing"></i>
     </a>
     <a href="./final_design.html">
         <i class="fa-solid fa-share-nodes icon_landing"></i>
     </a>
  </section>
- <button class="button_landing">Crear Entradas </button>
+    <button class="button_landing">
+        <a href="./tickets.html">Crear Entradas</a>
+    </button>
 </main>
 
