--- a/src/partials/main_landing.html
+++ b/src/partials/main_landing.html
@@ -4,16 +4,16 @@
  <h3 class="subt_landing">CREA TUS PROPIAS ENTRADAS DE <br> FORMA SENCILLA Y RÁPIDA</h3>
  <section class="rectangle">
     <a href="./tickets.html" target="_blank">
-        <i class="fa-solid fa-pen-to-square icon_landing"></i>
+        <i class="fa-solid fa-pen-nib icon_landing"></i>
     </a>
     <a href="">
-        <i class="fa-solid fa-keyboard icon_landing"></i>
+        <i class="fa-regular fa-keyboard icon_landing "></i>
     </a>
     <a href="./final_design.html" target="_blank">
-        <i class="fa-solid fa-share-nodes icon_landing"></i>
+        <i class="fa-solid fa-share icon_landing"></i>
     </a>
  </section>
-    <button class="button_landing">
+    <button class="button_landing " target="_blank">
         <a href="./tickets.html">Crear Entradas</a>
     </button>
 </main>
