--- a/src/scss/layout/_main_landing.scss
+++ b/src/scss/layout/_main_landing.scss
@@ -6,16 +6,7 @@
     background-color:$background_landing;
     font-family: $font_family;
     padding: 30px;
-    height: 80%;
-    @media (min-width: 768px){
-        height: 100vh;
-        width: 100%;
-    }
-    @media (min-width: 1024px){
-        height: 90%;
-      
-    }
-       
+    
 }
 .logo_landing{
     height: 350px;
@@ -43,22 +34,20 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 45px;
     border: 2px solid $icons_color;
     border-radius: 3px;
     margin-top: 25px;
      
 }
 .icon_landing{
-    size: 50px;
     padding: 5px;
     @include form_animation();
     color: $icons_color;
 }
 .button_landing{
-    @include form_animation();
+     @include form_animation();
     font-size: 2rem;
-    color: white;
     background-color: $title_color;
     border-style: none;
     height: 50px;
@@ -67,6 +56,11 @@
     margin-top: 50px;
     margin-bottom: 50px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    & a{
+        text-decoration: none;
+        color: white;
+        
+    }
     @media (min-width: 1024px){
         margin-bottom: 150px;
     }
