--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,28 +1,28 @@
-<section class="ticket-section">
-    <div class="ticket-wrapper">
-        <div class="button-ticket">
-            <button class="button-ticket_button"></button>
+<section class="ticket__section">
+    <div class="ticket__wrapper">
+        <div class="button__ticket">
+            <button class="button__ticket--button">ENTRADA</button>
         </div>
         <div class="ticket">
-            <div>
-                <h1>Entrada</h1>
-                <h2>1</h2>
+            <div class="ticket__div">
+                <h1 class="ticket__div--title">Entrada</h1>
+                <h2 class="ticket__div--subtitle">festival</h2>
             </div>
         </div>
-        <div class="ticket-image">
-            <img class="imageticket" src="">
+        <div class="section__image">
+            <img class="section__image--1" src="./images/logo_b_H.png"/>
         </div>
         <div class="icons"></div>
-            <div class="icon1">
+            <div class="icon">
                 <a href=""></a>
             </div>
-            <div class="icon2">
+            <div class="icon">
                 <a href=""></a>
             </div>
-            <div class="icon3">
+            <div class="icon">
                 <a href=""></a>
             </div>
-            <div class="icon4">
+            <div class="icon">
                 <a href=""></a>
             </div>
     </div>
