link a crear entradas

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -67,7 +67,7 @@
             <h2>COMPARTE</h2>
         </div>
 
-        <a href="#" class="form__share--button">
+        <a href="./final_design.html" class="form__share--button">
             <i class="fa-solid fa-ticket"></i>
             CREAR ENTRADA</a>
 
