--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -40,41 +40,36 @@
         
 
     <section class="form__fillin">
-        <i class="fa-regular fa-keyboard" style="color: #acc196;"></i>
-        <h2 class="form__fillin--title">RELLENA</h2>
+        <div class="form__fillin--title">
+            <i class="fa-regular fa-keyboard"></i>
+            <h2>RELLENA</h2>
+        </div>
 
-            <div class="form__fillin--input">
-                <label for="eventName">Nombre del evento</label>
-                <input type="text" id="eventName" class="inputs"/>
-            </div>
-            <div class="form__fillin--input">
-                <label for="location">Ubicación</label>
-                <input type="text" id="location" class="inputs"/>
-            </div>
-            <div class="form__fillin--input">
-                <label for="dates">Fechas</label>
-                <input type="date" id="dates" class="inputs" />
-            </div>
-            <div class="form__fillin--input">
-                <label for="image">Foto o Logo</label>
-                <input type="submit" id="image" class="inputs inputimg" value="Añadir imagen"/>
-            </div>
-            <div class="form__fillin--input">
-                <label for="price">Precio</label>
-                <input type="number" id="price" class="inputs" />
-            </div>
-            <div class="form__fillin--input">
-                <label for="qrcode">QR</label>
-                <input type="text" id="qrcode" class="inputs" />
-            </div>
-            <div class="form__fillin--input">
-                <label for="website">Web del organizador</label>
-                <input type="text" id="website" class="inputs" />
-            </div>
-            <div class="form__fillin--input">
-                <label for="sponsors">Nombres de los patrocinadores</label>
-                <input type="text" id="sponsors" class="inputs" />
-            </div>
+        <div class="form__fillin--input">
+            <label for="eventName">Nombre del evento</label>
+            <input type="text" id="eventName" class="inputs"/>
+            
+            <label for="location">Ubicación</label>
+            <input type="text" id="location" class="inputs"/>
+            
+            <label for="dates">Fechas</label>
+            <input type="date" id="dates" class="inputs" />
+            
+            <label for="image">Foto o Logo</label>
+            <input type="file" id="image" class="inputs" value="Añadir imagen"/>
+            
+            <label for="price">Precio</label>
+            <input type="number" id="price" class="inputs" />
+            
+            <label for="qrcode">QR</label>
+            <input type="file" id="qrcode" class="inputs" value="Añadir QR"/>
+            
+            <label for="website">Web del organizador</label>
+            <input type="text" id="website" class="inputs" />
+            
+            <label for="sponsors">Nombres de los patrocinadores</label>
+            <input type="text" id="sponsors" class="inputs" />
+        </div>
         
 
     </section>
