add ticket preview and pargin to main section in tickets page

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -1,14 +1,14 @@
 <div class="category">
-    <h2>JAMAICA FESTIVAL</h2>
-    <img src="" alt="Esto es el logo del festival"/>
-    <p>18, 19 y 20 de junio</p>
-    <p>50€</p>
+    <h2 class="category__title">JAMAICA FESTIVAL</h2>
+    <img src="./images/cartel-pruebas.jpg" alt="Esto es el logo del festival" class="category__image"/>
+    <p class="category__date">18, 19 y 20 de junio</p>
+    <p class="category__price">50€</p>
     <div class="category__location">
         <i class="fa-solid fa-location-dot"></i>
         <p>JAMAICA</p>
     </div>
-    <p>www.festivaljamaicano.com</p>
-    <p>Patrocinado por Adalab y Eventigo</p>
-    <img src="" alt="Esto es el QR de la iamgen">
+    <p class="category__web">www.festivaljamaicano.com</p>
+    <p class="category__sponsor">Patrocinado por Adalab y Eventigo</p>
+    <img src="./images/qr.jpg" alt="Esto es el QR de la iamgen" class="category__qr">
 
 </div>
