--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -7,7 +7,7 @@
 
         <fieldset class="form__design--options">
                 
-            <legend>Elige una categoría</legend>
+            <h4 class="options__title">Elige una categoría</h4>
 
             <div class="options">
                 <label for="categoria1">
