--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -25,18 +25,20 @@
     background-color:$icons_color;
     border: solid $icons_color;
 }
+
+
+
 /*DESIGN*/
 
 .form__design {
     background-color: $background_landing;
     color: $title_color;
     font-family: $font_family;
-    width: 100vw;
     padding: 10px 0 15px 10px;
     border-bottom: 1px solid $title_color;
 
     @media (min-width: 768px) {
-        width: 50vw;            
+        width: 100vw;            
     }
 
     
@@ -54,18 +56,19 @@
 }
 
 .form__design--options{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr; 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
     margin-top: 10px;
-    & legend {
-        font-size: 1.2rem;
-        grid-column: 1/2;
-    }
 }
 
+.options__title {
+    font-size: 1.2rem;
+    align-self: start;
+    }
+
 .options {
-    grid-column: 3/4;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -75,20 +78,11 @@
     }
 }
 
-
-
-
-
-
-
-
-
 /*SHARE*/
 
 .form__share {
     background-color: $background_landing;
     color: $title_color;
-    width: 100vw;
     font-family: $font_family;
     display: flex;
     align-items: baseline;
@@ -97,7 +91,7 @@
     border-bottom: 1px solid $title_color;
 
         @media (min-width: 768px) {
-            width: 50vw;            
+            width: 100vw;            
         }
 
     &--title {
