--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,8 +3,10 @@
 @import 'core/mixins';
 @import 'layout/header';
 @import 'layout/main_landing';
+@import 'layout/main_tickets';
 @import 'layout/preview';
+@import 'layout/categories';
 @import 'layout/form';
 @import 'layout/footer';
-@import 'layout/categories';
+
 
