categories music and gastronomy and try to put the grid display on the form page

--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="section__image">
-            <img class="section__image--1" src="./images/logo_b_H.png"/>
+           <!-- <img class="section__image--1" src="./images/logo_b_H.png"/> -->
         </div>
         <div class="icons"></div>
             <div class="icon">
