--- a/src/scss/layout/_main_tickets.scss
+++ b/src/scss/layout/_main_tickets.scss
@@ -1,4 +1,14 @@
 .main__tickets {
-    padding-left: 20px;
     background-color: $background_landing;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 100vw;
+
+    @media (min-width: 768px) {
+        width: 100vw;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
 }
