--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -1,4 +1,5 @@
-.category {
+
+.category__cinema {
     background-color: rosybrown;
     background-image: url(/images/cine.jpg);
     background-size: cover;
@@ -13,34 +14,35 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
 
     &__title {
-        font-size: 2rem;
+        font-size: 2.3rem;
         font-weight: bold;
         text-decoration: dotted underline;
         background-color: $background_landing;
-        grid-column: 1/4;
+        grid-column: 2/6;
         grid-row: 1/2;
-        align-self: center;
+        align-self: start;
+        justify-self: end;
         
     }
     
     &__image {
-        width: 70px;
-        grid-column: 5/6;
+        width: 50px;
+        grid-column: 1/2;
         grid-row: 1/2;
     }
 
     &__date {
         font-size: 1.4rem;
         grid-column: 3/5;
-        grid-row: 2/4;
+        grid-row: 2/3;
         align-self: center;
         font-weight: bold;
     }
 
     &__price {
         font-size: 2rem;
-        grid-column: 4/5;
-        grid-row: 1/2;
+        grid-column: 5/6;
+        grid-row: 2/3;
         align-self: center;
         justify-self: center;
         font-weight: bold;
@@ -50,13 +52,109 @@
         font-size: 1.4rem;
         font-weight: bold;
         display: inline-block;
-        grid-column: 1/3;
-        grid-row: 2/4;
+        grid-column: 3/6;
+        grid-row: 3/4;
         align-self: center;
         justify-self: center;
         background-color: $background_landing;
         & i {
-            color: black;
+            color: $text_color;
+            display: inline;
+            margin-right: 3px;
+        }
+        & p {display: inline;}
+    }
+
+    &__web {
+        font-size: 0.8rem;
+        grid-column: 4/6;
+        grid-row: 4/5;
+        align-self: end;
+        justify-self: end;
+        color: $background_landing;
+    }
+
+    &__sponsor {
+        font-size: 0.8rem;
+        grid-column: 2/4;
+        grid-row: 4/5;
+        align-self: end;
+        justify-self: end;
+        color: $background_landing;
+        
+    }
+
+    &__qr {
+        width: 50px;
+        grid-column: 1/2;
+        grid-row: 4/5;
+        justify-self: start;
+    }
+}
+
+
+.category__music {
+    background-color: rosybrown;
+    background-image: url(/images/musica.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 200px;
+    margin: 40px;
+    padding: 20px;
+    font-family: $font_family;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    color: white;
+
+    &__title {
+        font-size: 2.5rem;
+        font-weight: bold;
+        border: 1px solid white;
+        grid-column: 1/5;
+        grid-row: 1/2;
+        align-self: center;
+        justify-self: center;
+        
+    }
+    
+    &__image {
+        width: 50px;
+        grid-column: 5/6;
+        grid-row: 1/2;
+        justify-self: end;
+    }
+
+    &__date {
+        font-size: 1.5rem;
+        grid-column: 2/4;
+        grid-row: 2/4;
+        align-self: center;
+        font-weight: bold;
+        color: $text_color;
+    }
+
+    &__price {
+        font-size: 2rem;
+        grid-column: 1/2;
+        grid-row: 2/4;
+        align-self: center;
+        justify-self: center;
+        font-weight: bold;
+    }
+
+    &__location {
+        font-size: 1.4rem;
+        font-weight: bold;
+        display: inline-block;
+        grid-column: 4/6;
+        grid-row: 2/4;
+        align-self: center;
+        justify-self: center;
+
+        & i {
+            color: white;
             display: inline;
             margin-right: 3px;
         }
@@ -85,5 +183,104 @@
         grid-column: 5/6;
         grid-row: 4/5;
         justify-self: end;
+    }
+}
+
+
+.category {
+    background-color: rosybrown;
+    background-image: url(/images/gastronomia.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 200px;
+    margin: 40px;
+    padding: 20px;
+    font-family: $font_family;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    color: white;
+
+    &__title {
+        font-size: 2.6rem;
+        font-weight: bold;
+        border: 1px solid white;
+        grid-column: 3/5;
+        grid-row: 1/2;
+        align-self: end;
+        justify-self: center;
+        color: $text_color;
+        
+    }
+    
+    &__image {
+        width: 50px;
+        grid-column: 3/4;
+        grid-row: 4/5;
+        justify-self: start;
+    }
+
+    &__date {
+        font-size: 1.5rem;
+        grid-column: 2/4;
+        grid-row: 2/4;
+        align-self: center;
+        font-weight: bold;
+        color: $text_color;
+    }
+
+    &__price {
+        font-size: 2rem;
+        grid-column: 5/6;
+        grid-row: 1/2;
+        align-self: center;
+        justify-self: center;
+        font-weight: bold;
+        color: $text_color;
+    }
+
+    &__location {
+        font-size: 1.4rem;
+        font-weight: bold;
+        display: inline-block;
+        grid-column: 4/6;
+        grid-row: 2/4;
+        align-self: center;
+        justify-self: center;
+        color: $text_color;
+
+        & i {
+            color: $text_color;
+            display: inline;
+            margin-right: 3px;
+        }
+        & p {display: inline;}
+    }
+
+    &__web {
+        font-size: 0.8rem;
+        grid-column: 4/6;
+        grid-row: 4/5;
+        align-self: center;
+        justify-self: end;
+        color: $text_color
+    }
+
+    &__sponsor {
+        font-size: 0.8rem;
+        grid-column: 4/6;
+        grid-row: 4/5;
+        align-self: end;
+        justify-self: end;
+        color: $text_color;
+        
+    }
+
+    &__qr {
+        width: 50px;
+        grid-column: 2/3;
+        grid-row: 4/5;
+        justify-self: start;
     }
 }
