--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -1,3 +1,67 @@
+.form {
+    grid-column: 1/2;
+    grid-row: 2/3;
+
+    @media (min-width: 768px) {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+}
+
+/*DESIGN*/
+
+.form__design {
+    background-color: $background_landing;
+    color: $title_color;
+    font-family: $font_family;
+    padding: 10px 0 15px 10px;
+    border-bottom: 1px solid $title_color;
+
+    @media (min-width: 768px) {
+        width: 100vw;            
+    }
+
+    
+    & h2 {
+        font-weight: bold;
+        font-size: 1.7rem;
+        display: inline-block;
+    }
+
+    & i {display: inline-block;
+        font-size: 1.5rem;
+        padding: 5px;
+        color: $icons_color;
+    }
+}
+
+.form__design--options{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.options__title {
+    font-size: 1.5rem;
+    align-self: start;
+    }
+
+.options {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+    & label {
+        font-size: 1.5rem;
+    }
+}
+
+
+
+/*FILLIN SECTION */
+
 .form__fillin{
     background-color: $background_landing;
     display: flex;
@@ -28,55 +92,6 @@
 
 
 
-/*DESIGN*/
-
-.form__design {
-    background-color: $background_landing;
-    color: $title_color;
-    font-family: $font_family;
-    padding: 10px 0 15px 10px;
-    border-bottom: 1px solid $title_color;
-
-    @media (min-width: 768px) {
-        width: 100vw;            
-    }
-
-    
-    & h2 {
-        font-weight: bold;
-        font-size: 1.7rem;
-        display: inline-block;
-    }
-
-    & i {display: inline-block;
-        font-size: 15px;
-        padding: 5px;
-        color: $icons_color;
-    }
-}
-
-.form__design--options{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 10px;
-}
-
-.options__title {
-    font-size: 1.2rem;
-    align-self: start;
-    }
-
-.options {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 5px;
-    & label {
-        font-size: 1.2rem;
-    }
-}
 
 /*SHARE*/
 
