--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -6,8 +6,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    width: 100vw;
     @media screen and (min-width: 768px) {
         border-radius: 10px;
+        grid-column: 2/3;
+        grid-row: 1/2;
     }
 }
 
