--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -187,7 +187,7 @@
 }
 
 
-.category {
+.category__gastronomy {
     background-color: rosybrown;
     background-image: url(/images/gastronomia.jpg);
     background-size: cover;
