grid section tickets

--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -3,6 +3,9 @@
         <div class="button__ticket">
             <button class="button__ticket--button">ENTRADA</button>
         </div>
+
+        <load src="/partials/categories.html" />
+
         <div class="ticket">
             <div class="ticket__div">
                 <h1 class="ticket__div--title">Entrada</h1>
