--- a/src/scss/layout/_main_tickets.scss
+++ b/src/scss/layout/_main_tickets.scss
@@ -3,11 +3,10 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    width: 100vw;
 
     @media (min-width: 768px) {
         width: 100vw;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 50vw 50vw;
         grid-template-rows: 1fr;
     }
 
