categories, grid, homogeneizacion

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -45,31 +45,31 @@
             <h2>RELLENA</h2>
         </div>
 
-        <div class="form__fillin--input">
-            <label for="eventName">Nombre del evento</label>
+        <fieldset class="form__fillin--input">
+            <label for="eventName" class="labels">Nombre del evento</label>
             <input type="text" id="eventName" class="inputs"/>
             
-            <label for="location">Ubicación</label>
+            <label for="location" class="labels">Ubicación</label>
             <input type="text" id="location" class="inputs"/>
             
-            <label for="dates">Fechas</label>
+            <label for="dates" class="labels">Fechas</label>
             <input type="date" id="dates" class="inputs" />
             
-            <label for="image">Foto o Logo</label>
+            <label for="image" class="labels">Foto o Logo</label>
             <input type="file" id="image" class="inputs" value="Añadir imagen"/>
             
-            <label for="price">Precio</label>
+            <label for="price" class="labels">Precio</label>
             <input type="number" id="price" class="inputs" />
             
-            <label for="qrcode">QR</label>
+            <label for="qrcode" class="labels">QR</label>
             <input type="file" id="qrcode" class="inputs" value="Añadir QR"/>
             
-            <label for="website">Web del organizador</label>
+            <label for="website" class="labels">Web del organizador</label>
             <input type="text" id="website" class="inputs" />
             
-            <label for="sponsors">Nombres de los patrocinadores</label>
+            <label for="sponsors" class="labels">Nombres de los patrocinadores</label>
             <input type="text" id="sponsors" class="inputs" />
-        </div>
+        </fieldset>
         
 
     </section>
