--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -1,29 +1,9 @@
 <section class="ticket__section">
     <div class="ticket__wrapper">
         <div class="button__ticket">
-            <button class="button__ticket--button">ENTRADA</button>
+            <button class="button__ticket--button">RESET</button>
         </div>
-        <div class="ticket">
-            <div class="ticket__div">
-                <h1 class="ticket__div--title">Entrada</h1>
-                <h2 class="ticket__div--subtitle">festival</h2>
-            </div>
-        </div>
-        <div class="section__image">
-            <img class="section__image--1" src="./images/logo_b_H.png"/>
-        </div>
-        <div class="icons"></div>
-            <div class="icon">
-                <a href=""></a>
-            </div>
-            <div class="icon">
-                <a href=""></a>
-            </div>
-            <div class="icon">
-                <a href=""></a>
-            </div>
-            <div class="icon">
-                <a href=""></a>
-            </div>
+
+        <!--<load src="/partials/categories.html" /> -->
     </div>
 </section>
