--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -1,10 +1,191 @@
-.category {
+.cinema {
     background-color: rosybrown;
     background-image: url(/images/cine.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 400px;
-    height: 200px;
+    width: 700px;
+    height: 400px;
+    margin: 40px;
+    padding: 20px;
+    font-family: $font_family;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
+    &__title {
+        font-size: 2rem;
+        font-weight: bold;
+        text-decoration: dotted underline;
+        background-color: $background_landing;
+        grid-column: 1/4;
+        grid-row: 1/2;
+        align-self: center;
+        
+    }
+    
+    &__image {
+        width: 70px;
+        grid-column: 5/6;
+        grid-row: 1/2;
+    }
+
+    &__date {
+        font-size: 1.4rem;
+        grid-column: 3/5;
+        grid-row: 2/4;
+        align-self: center;
+        font-weight: bold;
+    }
+
+    &__price {
+        font-size: 2rem;
+        grid-column: 4/5;
+        grid-row: 1/2;
+        align-self: center;
+        justify-self: center;
+        font-weight: bold;
+    }
+
+    &__location {
+        font-size: 1.4rem;
+        font-weight: bold;
+        display: inline-block;
+        grid-column: 1/3;
+        grid-row: 2/4;
+        align-self: center;
+        justify-self: center;
+        background-color: $background_landing;
+        & i {
+            color: black;
+            display: inline;
+            margin-right: 3px;
+        }
+        & p {display: inline;}
+    }
+
+    &__web {
+        font-size: 0.8rem;
+        grid-column: 1/3;
+        grid-row: 4/5;
+        align-self: end;
+        color: $background_landing;
+    }
+
+    &__sponsor {
+        font-size: 0.8rem;
+        grid-column: 3/5;
+        grid-row: 4/5;
+        align-self: end;
+        color: $background_landing;
+        
+    }
+
+    &__qr {
+        width: 50px;
+        grid-column: 5/6;
+        grid-row: 4/5;
+        justify-self: end;
+    }
+}
+
+
+.music {
+    background-color: rosybrown;
+    background-image: url(/images/musica.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 700px;
+    height: 400px;
+    margin: 40px;
+    padding: 20px;
+    font-family: $font_family;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
+    &__title {
+        font-size: 2rem;
+        font-weight: bold;
+        text-decoration: dotted underline;
+        background-color: $background_landing;
+        grid-column: 1/4;
+        grid-row: 1/2;
+        align-self: center;
+        
+    }
+    
+    &__image {
+        width: 70px;
+        grid-column: 5/6;
+        grid-row: 1/2;
+    }
+
+    &__date {
+        font-size: 1.4rem;
+        grid-column: 3/5;
+        grid-row: 2/4;
+        align-self: center;
+        font-weight: bold;
+    }
+
+    &__price {
+        font-size: 2rem;
+        grid-column: 4/5;
+        grid-row: 1/2;
+        align-self: center;
+        justify-self: center;
+        font-weight: bold;
+    }
+
+    &__location {
+        font-size: 1.4rem;
+        font-weight: bold;
+        display: inline-block;
+        grid-column: 1/3;
+        grid-row: 2/4;
+        align-self: center;
+        justify-self: center;
+        background-color: $background_landing;
+        & i {
+            color: black;
+            display: inline;
+            margin-right: 3px;
+        }
+        & p {display: inline;}
+    }
+
+    &__web {
+        font-size: 0.8rem;
+        grid-column: 1/3;
+        grid-row: 4/5;
+        align-self: end;
+        color: $background_landing;
+    }
+
+    &__sponsor {
+        font-size: 0.8rem;
+        grid-column: 3/5;
+        grid-row: 4/5;
+        align-self: end;
+        color: $background_landing;
+        
+    }
+
+    &__qr {
+        width: 50px;
+        grid-column: 5/6;
+        grid-row: 4/5;
+        justify-self: end;
+    }
+}
+
+.gastronomia {
+    background-color: rosybrown;
+    background-image: url(/images/gastronomia.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 700px;
+    height: 400px;
     margin: 40px;
     padding: 20px;
     font-family: $font_family;
