--- a/src/scss/layout/_main_tickets.scss
+++ b/src/scss/layout/_main_tickets.scss
@@ -1,4 +1,11 @@
 .main__tickets {
-    padding-left: 20px;
     background-color: $background_landing;
+    
+    @media (min-width: 768px) {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: 1fr;
+        
+
+    }
 }
