--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -4,10 +4,10 @@
     font-family: $font_family;
     $background_landing: #F2F2C9;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     @media screen and (min-width: 768px) {
-        border-radius: 10px;
+        order: 5;
     }
 }
 
@@ -15,6 +15,7 @@
     display: flex;
     margin: 30px;
     margin-left: 0;
+    
     &--button {
         color: $background_foot-head;
         display: flex;
@@ -28,6 +29,7 @@
         }
     }
 }
+
 
 .ticket {
     margin-bottom: 20px;
