--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -1,13 +1,13 @@
 <div class="category">
-    <h2 class="category__title">JAMAICA FESTIVAL</h2>
+    <h2 class="category__title">NOMBRE FESTIVAL</h2>
     <img src="./images/cartel-pruebas.jpg" alt="Esto es el logo del festival" class="category__image"/>
-    <p class="category__date">18, 19 y 20 de junio</p>
-    <p class="category__price">50€</p>
+    <p class="category__date">Fechas</p>
+    <p class="category__price">€€€</p>
     <div class="category__location">
         <i class="fa-solid fa-location-dot"></i>
-        <p>JAMAICA</p>
+        <p>Ubicación</p>
     </div>
-    <p class="category__web">www.festivaljamaicano.com</p>
+    <p class="category__web">www.festival.com</p>
     <p class="category__sponsor">Patrocinado por Adalab y Eventigo</p>
     <img src="./images/qr.jpg" alt="Esto es el QR de la iamgen" class="category__qr">
 
