--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -4,6 +4,6 @@
             <button class="button__ticket--button">RESET</button>
         </div>
 
-        <!--<load src="/partials/categories.html" /> -->
+        <load src="/partials/categories.html" />
     </div>
 </section>
