--- a/src/scss/layout/_categories.scss
+++ b/src/scss/layout/_categories.scss
@@ -1,11 +1,10 @@
-.cinema {
+.category {
     background-color: rosybrown;
     background-image: url(/images/cine.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 700px;
-    height: 400px;
-    margin: 40px;
+    width: 300px;
+    height: 200px;
     padding: 20px;
     font-family: $font_family;
     display: grid;
