--- a/src/partials/preview.html
+++ b/src/partials/preview.html
@@ -4,6 +4,20 @@
             <button class="button__ticket--button">RESET</button>
         </div>
 
-        <load src="/partials/categories.html" />
+        <div class="category">
+            <h2 class="category__title">NOMBRE FESTIVAL</h2>
+            <img src="./images/cartel-pruebas.jpg" alt="Esto es el logo del festival" class="category__image"/>
+            <p class="category__date">Fechas</p>
+            <p class="category__price">€€€</p>
+            <div class="category__location">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>Ubicación</p>
+            </div>
+            <p class="category__web">www.festival.com</p>
+            <p class="category__sponsor">Patrocinado por Adalab y Eventigo</p>
+            <img src="./images/qr.jpg" alt="Esto es el QR de la iamgen" class="category__qr">
+        
+        </div>
+
     </div>
 </section>
